samples/_failures_safe/1761044715_b5cceb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b03f12d4.c: In function ‘main’:
./samples/SAFE/__tmp_b03f12d4.c:143:12: error: missing terminating " character
  143 |     printf("Dijkstra's Algorithm:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b03f12d4.c:143:5: error: expected expression at end of input
  143 |     printf("Dijkstra's Algorithm:\
      |     ^~~~~~
./samples/SAFE/__tmp_b03f12d4.c:143:5: error: expected declaration or statement at end of input
